--- a/packages/frontend/src/assets/base.css
+++ b/packages/frontend/src/assets/base.css
@@ -58,4 +58,5 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	overflow-y: scroll;
+	overscroll-behavior-y: none;
 }
